syntax = "proto3";

package genproto;

option go_package="genproto/user_service";

import "branch_user.proto";
import "google/protobuf/empty.proto";

service BranchUserService {
    rpc Create(BranchUser) returns (BranchUserId) {}
    rpc Get(BranchUserId) returns (BranchUser) {}
    rpc GetAll(GetAllBranchUsersRequest) returns (GetAllBranchUsersResponse) {}
    rpc Update(BranchUser) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteBranchUserRequest) returns (google.protobuf.Empty) {}
    rpc GetByPhone(GetBranchUserByPhoneRequest) returns (BranchUser) {}
    rpc UpdateFcmToken(UpdateBranchUserFcmTokenRequest) returns (google.protobuf.Empty) {}
    rpc DeleteFcmToken(BranchUserId) returns (google.protobuf.Empty) {}
    rpc GetAllPhones(GetAllPhonesRequest) returns (GetAllPhonesResponse) {}

    rpc GetAllBranchUsersFcmTokens(GetAllBranchUsersFcmTokensRequest) returns (GetAllBranchUsersFcmTokensResponse) {}

}

message GetBranchUserByPhoneRequest {
    string phone = 1;
    string shipper_id = 2;
}

message BranchUserId {
    string id = 1;
}

message UpdateBranchUserFcmTokenRequest {
    string id = 1;
    string shipper_id = 2;
	string fcm_token = 3;
    string platform_id = 4;
}

message GetAllBranchUsersRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string shipper_id = 3;
    string user_role_id = 4;
    string search = 5;
    string branch_id = 6;
}

message GetAllBranchUsersResponse {
    repeated BranchUser branch_users = 1;
    uint64 count = 2;
}

message DeleteBranchUserRequest {
    string id = 1;
    string shipper_id = 2;
}

