syntax = "proto3";

package genproto;

option go_package="genproto/user_service";

import "customer.proto";
import "branch_user.proto";
import "google/protobuf/empty.proto";

service CustomerService {
    rpc Create(Customer) returns (CustomerId) {}   
    rpc Get(CustomerId) returns (Customer) {}
    rpc GetAll(GetAllCustomersRequest) returns (GetAllCustomersResponse) {}
    rpc GetAggregate(GetAllCustomersRequest) returns (GetAllCustomersResponse) {}
    rpc GetNonAggregate(GetAllCustomersRequest) returns (GetAllCustomersResponse) {}
    rpc Update(Customer) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteCustomerRequest) returns (google.protobuf.Empty) {}
    rpc SearchByPhone(SearchCustomersByPhoneRequest) returns (SearchCustomersByPhoneResponse) {}
    rpc GetOrInsert(GetCustomerOrInsertRequest) returns (CustomerId) {}
    rpc GetByPhone(GetCustomerByPhoneRequest) returns  (Customer) {}
    rpc UpdateFcmToken(UpdateCustomerFcmTokenRequest) returns (google.protobuf.Empty) {}
    rpc UpdateTgChatId(UpdateCustomerTgChatIdRequest) returns (google.protobuf.Empty) {}
    rpc GetRegisteredCustomersReport(GetRegisteredCustomersReportRequest) returns (GetRegisteredCustomersReportResponse) {}
    rpc AttachBotLanguage(AttachBotLanguageRequest) returns (google.protobuf.Empty) {}
    rpc CreateCustomerComment(CreateCustomerCommentRequest) returns (google.protobuf.Empty) {}
    rpc DeleteCustomerComment(DeleteCustomerCommentRequest) returns (google.protobuf.Empty) {}
    rpc GetCustomerComments(GetCustomerCommentsRequest) returns (GetCustomerCommentsResponse) {}
    rpc GetFcmTokens(GetFcmTokensRequest) returns (GetFcmTokensResponse) {}
    rpc GetAllPhones(GetAllPhonesRequest) returns (GetAllPhonesResponse) {}
    rpc UpdateDateOfBirth(UpdateDateOfBirthRequest) returns (google.protobuf.Empty) {}
    rpc SelfDelete(DeleteCustomerRequest) returns (google.protobuf.Empty) {}
}

message GetRegisteredCustomersReportRequest {
    string shipper_id = 1;
    uint64 month = 2;
    uint64 year = 3;
    bool with_self_delete = 4;
}

message GetRegisteredCustomersReportResponse {
    repeated MontlyRegisteredCustomersReport report = 1;
}

message CustomerId {
    string id = 1;
}

message GetCustomerOrInsertRequest {
    string shipper_id = 1;
    string phone = 2;
    string name = 3;
    bool with_self_delete = 4;
}

message GetCustomerByPhoneRequest {
    string shipper_id = 1;
    string phone = 2;
    bool with_self_delete = 3;
}

message UpdateCustomerFcmTokenRequest {
    string id = 1;
    string fcm_token = 2;
    string shipper_id = 3;
    string platform_id = 4;
}

message UpdateCustomerTgChatIdRequest {
    string id = 1;
    string tg_chat_id = 2;
    string shipper_id = 3;
}

message GetAllCustomersRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string shipper_id = 3;
    string search = 4;
    string customer_type_id = 5;
    string start_date = 6;
    string end_date = 7;
    uint32 start_count = 8;
    uint32 end_count = 9;
    float from_average_sum = 10;
    float to_average_sum = 11;
    bool with_tg_chat_id = 12;
    bool with_self_delete = 13;
}

message GetAllCustomersResponse {
    repeated Customer customers = 1;
    uint64 count = 2;
    uint64 active_count = 3;
    uint64 today_registered_count = 4;
    uint64 today_ordered_count = 5;
}

message SearchCustomersByPhoneRequest {
    string phone = 1;
    uint64 limit = 2;
    string shipper_id = 3;
    string customer_type_id = 4;
    bool with_self_delete = 5;
}

message SearchCustomersByPhoneResponse {
    repeated Customer customers = 1;
}

message DeleteCustomerRequest {
    string id = 1;
    string shipper_id = 2;
}

message AttachBotLanguageRequest {
    string id = 1;
    string lang = 2;
}

message CreateCustomerCommentRequest {
    string customer_id = 1;
    string creator_id = 2;
    string creator_type = 3;
    string comment = 4;
}

message DeleteCustomerCommentRequest {
    string comment_id = 1;
}

message GetCustomerCommentsRequest {
    string customer_id = 1;
    string creator_type = 2;
    string start_date = 3;
    string end_date = 4;
    string shipper_id = 5;
}

message CustomerComments {
    string comment_id = 1;
    string customer_id = 2;
    string creator_id = 3;
    string creator_name = 4;
    string creator_type = 5;
    string comment = 6;
    string created_at = 7;
}

message GetCustomerCommentsResponse {
    repeated CustomerComments comments = 1;
}

message GetFcmTokensRequest {
    string shipper_id = 1;
}

message GetFcmTokensResponse {
    repeated string android_fcm_tokens = 1;
    repeated string ios_fcm_tokens = 2;
}

message UpdateDateOfBirthRequest{
    string customer_id = 1;
    string shipper_id = 2;
    string date_of_birth = 3;
}